scrollbar and other minor fixes

--- a/bucketlist/Static/style.css
+++ b/bucketlist/Static/style.css
@@ -161,5 +161,5 @@ textarea {
   right: 0;
   left: 258px;
   width: 950px;
-  height: 80%;
+  height: 87%;
 }
